docs: minor documentation site fixes
- Fixed overflowX in code snippets
- Header behavior on mobile now scrolls along with content on mobile
- Made sure page navigation never overlaps

--- a/docs-site/styles/globals.css
+++ b/docs-site/styles/globals.css
@@ -26,6 +26,7 @@ pre[class*=language-] {
 	word-spacing: normal;
 	word-break: normal;
 	line-height: 1.5;
+	overflow-x: scroll;
 	tab-size: 4;
 	-webkit-hyphens: none;
 	hyphens: none;
